--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -3,6 +3,17 @@
 
 <body>
 <h1>{{title}} is working!</h1>
+
+{% for obj in object_list %}
+
+<a href ='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br/>
+{{ obj.content }}<br/>
+{{ obj.timestamp }}<br/>
+{{ obj.updated }}<br/>
+{{ obj.id }}<br/>
+
+{% endfor %}
+
 </body>
 
 </html>
