added more functionalities to Posts app

--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <body>
-<h1>Create Post</h1>
+<h1>{{page_title}}</h1>
 
 <form method='POST' action=''>{% csrf_token %}
 {{ form.as_p }}
