--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -1,16 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<html>
+{% extends "posts/base.html" %}
 
-<body>
+{% block head_title %}{{ instance.title }} | {{block.super}}{% endblock head_title %}
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li {% if message.tags %} class="{{message.tags}}"{% endif %}>{{message}}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+{% block content %}
 
 <h1>{{title}}</h1>
 
@@ -20,7 +12,4 @@
 {{ instance.updated }}<br/>
 {{ instance.id }}<br/>
 
-
-</body>
-
-</html>
+{% endblock content %}
