--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "posts/base.html" %}
 
-<body>
+
+{% block content %}
+
 <h1>{{page_title}}</h1>
 
 <form method='POST' action=''>{% csrf_token %}
@@ -9,6 +10,4 @@
 <input type="submit" value="Submit">
 </form>
 
-</body>
-
-</html>
+{% endblock content %}
