--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -1,7 +1,7 @@
-<!--DOCTYPE html -->
-<html>
+{% extends "posts/base.html" %}
 
-<body>
+    {% block content %}
+
 <h1>{{title}} is working!</h1>
 
 {% for obj in object_list %}
@@ -14,6 +14,4 @@
 
 {% endfor %}
 
-</body>
-
-</html>
+    {% endblock content %}
