--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-{% include "posts/messages_display.html" %}
+{% include "messages_display.html" %}
 
         <div class="'container">
     {% block content %}
