--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "posts/base.html" %}
+{% extends "base.html" %}
 
 {% block head_title %}{{ instance.title }} | {{block.super}}{% endblock head_title %}
 
