--- a/templates/topic/topic_list.html
+++ b/templates/topic/topic_list.html
@@ -13,11 +13,8 @@
     <li class="span4">
     <div class="thumbnail">
 <div class="col-sm-6">
-    {% if obj.image %}
-    <img src="{{obj.image.url}}" class="img-responsive"/>
-    {% endif %}
-        <h3><a href ='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><small> {{ obj.timestamp|timesince }} ago</small></h3>
-      <p>{{ obj.content|linebreaks|truncatechars:120}}</p>
+        <h3><a href ='{{ obj.get_absolute_url }}'>{{ obj.name }}</a></h3>
+      <p>{{ obj.description|linebreaks|truncatechars:120}}</p>
             <p><a href='{{ obj.get_absolute_url }}' class="btn btn-primary" role="button">View</a></p>
 </div>
 
