--- a/templates/posts/post_form.html
+++ b/templates/posts/post_form.html
@@ -5,7 +5,7 @@
 <div class="col-md-6 offset-md-3">
 <h1>{{page_title}}</h1>
 
-<form method='POST' action=''>{% csrf_token %}
+<form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit">
 </form>
