--- a/templates/topic/topic_detail.html
+++ b/templates/topic/topic_detail.html
@@ -12,4 +12,33 @@ CREATED AT: {{ instance.created_at }}<br/>
 AUTHOR: {{ instance.author }}<br/>
 URL: {{ instance.url_name }}<br/>
 
+{% for post in page_obj %}
+<div class="col-md-6 offset-md-3">
+<h1><a href ='{{ post.get_absolute_url }}'>{{ post.title }}</a><small> {{ post.timestamp|timesince }} ago</small></h1>
+    {% if post.image %}
+    <img src="{{post.image.url}}" class="img-responsive"/>
+    {% endif %}
+{{ post.content | linebreaks}}<br/>
+    <small>last edit: {{ post.last_updated }}</small><br/>
+</div>
+{% endfor %}
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
 {% endblock content %}
