--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -11,6 +11,7 @@
     {% endif %}
 {{ instance.content | linebreaks}}<br/>
     <small>last edit: {{ instance.last_updated }}</small><br/>
+    <small>Author: {{ instance.author }}</small><br/>
 </div>
 
 {% endblock content %}
