--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -6,12 +6,18 @@
 
 <div class="col-md-6 offset-md-3">
 <h1 >{{title}} <small>{{ instance.timestamp }}</small></h1>
+
     {% if instance.image %}
     <img src="{{instance.image.url}}" class="img-responsive"/>
     {% endif %}
 {{ instance.content | linebreaks}}<br/>
     <small>last edit: {{ instance.last_updated }}</small><br/>
     <small>Author: {{ instance.author }}</small><br/>
+    {% if instance.author == username %}
+    <p><a href="{% url 'post_update' topic=instance.topic id=instance.id %}" class="btn btn-primary" role="button">Edit post</a></p>
+    <p><a href="{% url 'post_delete' topic=instance.topic id=instance.id %}" class="btn btn-primary" role="button">Delete post</a></p>
+    {% endif %}
 </div>
+
 
 {% endblock content %}
