--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -3,21 +3,42 @@
 {% block head_title %}{{ instance.title }} | {{block.super}}{% endblock head_title %}
 
 {% block content %}
-
 <div class="col-md-6 offset-md-3">
-<h1 >{{title}} <small>{{ instance.timestamp }}</small></h1>
+    <h1>{{title}} <small>{{ instance.timestamp }}</small></h1>
 
     {% if instance.image %}
     <img src="{{instance.image.url}}" class="img-responsive"/>
     {% endif %}
-{{ instance.content | linebreaks}}<br/>
+    {{ instance.content | linebreaks}}<br/>
     <small>last edit: {{ instance.last_updated }}</small><br/>
     <small>Author: {{ instance.author }}</small><br/>
     {% if instance.author == username %}
-    <p><a href="{% url 'post_update' topic=instance.topic id=instance.id %}" class="btn btn-primary" role="button">Edit post</a></p>
-    <p><a href="{% url 'post_delete' topic=instance.topic id=instance.id %}" class="btn btn-primary" role="button">Delete post</a></p>
+    <p><a href="{% url 'post_update' topic=instance.topic id=instance.id %}" class="btn btn-primary" role="button">Edit
+        post</a></p>
+    <p><a href="{% url 'post_delete' topic=instance.topic id=instance.id %}" class="btn btn-primary" role="button">Delete
+        post</a></p>
     {% endif %}
+
+    <h2>------Comment Section------</h2>
+
+    <h6>
+        New Comment:
+        <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit">
+        </form>
+    </h6>
+
+    {% for comment in comments %}
+    <h4>{{ comment.author }}<small> {{ comment.created_at|timesince }} ago</small></h4>
+    {{ comment.content | linebreaks}}<br/>
+
+    {% if comment.author == username %}
+    <p><a href="{% url 'comment_update' topic=instance.topic post_id=instance.id comment_id=comment.id%}"
+          class="btn btn-secondary btn-sm" role="button">Edit comment</a>
+    <p><a href="{% url 'comment_delete' topic=instance.topic post_id=instance.id comment_id=comment.id%}"
+          class="btn btn-secondary btn-sm" role="button">Delete comment</a>
+        {% endif %}
+    {% endfor %}
 </div>
-
-
 {% endblock content %}
