--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div class="col-md-6 offset-md-3">
-    <h1>{{title}} <small>{{ instance.timestamp }}</small></h1>
+    <h1>{{title}} <small>{% if instance.draft %} <span style="color:red;">Draft </span>{% endif %}{{ instance.timestamp
+        }}</small></h1>
 
     {% if instance.image %}
     <img src="{{instance.image.url}}" class="img-responsive"/>
@@ -21,6 +22,7 @@
 
     <h2>------Comment Section------</h2>
 
+    {% if logged_in %}
     <h6>
         New Comment:
         <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
@@ -28,6 +30,7 @@
             <input type="submit" value="Submit">
         </form>
     </h6>
+    {% endif %}
 
     {% for comment in comments %}
     <h4>{{ comment.author }}<small> {{ comment.created_at|timesince }} ago</small></h4>
@@ -39,6 +42,6 @@
     <p><a href="{% url 'comment_delete' topic=instance.topic post_id=instance.id comment_id=comment.id%}"
           class="btn btn-secondary btn-sm" role="button">Delete comment</a>
         {% endif %}
-    {% endfor %}
+        {% endfor %}
 </div>
 {% endblock content %}
