--- a/templates/topic/topic_detail.html
+++ b/templates/topic/topic_detail.html
@@ -13,11 +13,15 @@ AUTHOR: {{ instance.author }}<br/>
 URL: {{ instance.url_name }}<br/>
 
 <p><a href="{% url 'post_create' topic=instance.url_name %}" class="btn btn-primary" role="button">Create post</a></p>
-
+<form method="'GET" action="">
+    <input type="text" name="q" placeholder="Search posts" value="{{ request.GET.q }}"/>
+    <input type="submit" value="Search"/>
+</form>
 {% for post in page_obj %}
 <div class="col-md-6 offset-md-3">
     <h1><a href='{{ post.get_absolute_url }}'>{{ post.title }}</a><small> {{ post.timestamp|timesince }} ago</small>
     </h1>
+    {% if post.draft %} <h5 style="color:red">Draft</h5> {% endif %}
     {% if post.image %}
     <img src="{{post.image.url}}" class="img-responsive"/>
     {% endif %}
@@ -30,7 +34,7 @@ URL: {{ instance.url_name }}<br/>
     <span class="step-links">
         {% if page_obj.has_previous %}
             <a href="?page=1">&laquo; first</a>
-            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+            <a href="?page={{ page_obj.previous_page_number }}&q={{ request.GET.q }}">previous</a>
         {% endif %}
 
         <span class="current">
@@ -38,8 +42,8 @@ URL: {{ instance.url_name }}<br/>
         </span>
 
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">next</a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+            <a href="?page={{ page_obj.next_page_number }}&q={{ request.GET.q }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}&q={{ request.GET.q }}">last &raquo;</a>
         {% endif %}
     </span>
 </div>
