--- a/templates/topic/topic_list.html
+++ b/templates/topic/topic_list.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 <h1>{{title}}</h1>
-
+<form method="'GET" action="">
+    <input type="text" name="q" placeholder="Search topics" value="{{ request.GET.q }}"/>
+    <input type="submit" value="Search"/>
+</form>
 <p><a href="{% url 'topic_create' %}" class="btn btn-primary" role="button">Create topic</a></p>
 
 {% for obj in page_obj %}
